<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="title">PlayList maker</string>
    <string name="search">Поиск</string>
    <string name="mediaData">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="termsOfUse">Пользовательское соглашение</string>
</resources>