<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_16"
    android:paddingEnd="@dimen/dimen_16"
    android:orientation="vertical"
    android:background="@color/blue" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:paddingTop="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_16"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        android:gravity="start"
        android:textColor="@color/white"  />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dimen_16"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/button"
        app:icon = "@drawable/ic_search_inactive_light"
        app:iconGravity = "textStart"
        app:iconTint = "@color/black"
        app:iconPadding = "@dimen/padding8"
        app:cornerRadius = "@dimen/corner_radius"
        android:foreground="?attr/selectableItemBackground"/>
    <Button
        android:id="@+id/mediaData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dimen_16"
        android:backgroundTint="@color/white"
        android:text="@string/mediaData"
        android:textColor="@color/black"
        android:textSize="@dimen/button"
        app:icon = "@drawable/ic_media_inactive_light"
        app:iconGravity = "textStart"
        app:iconTint = "@color/black"
        app:iconPadding = "@dimen/padding8"
        app:cornerRadius = "@dimen/corner_radius"
        android:foreground="?attr/selectableItemBackground"/>
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/button"
        app:icon = "@drawable/ic_settings_inactive_light"
        app:iconGravity = "textStart"
        app:iconTint = "@color/black"
        app:iconPadding = "@dimen/padding8"
        app:cornerRadius = "@dimen/corner_radius"
        android:foreground="?attr/selectableItemBackground"/>
</LinearLayout>