<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding4" >
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src= "@drawable/ic_arrow_left"
            android:backgroundTintMode="@color/white"
            android:padding="@dimen/padding16"   />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/YP_black"
            android:text="@string/settings"
            android:textSize="@dimen/text22"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:padding="@dimen/padding10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding24">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/darkTheme"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/text16"
                android:paddingStart="@dimen/padding6"
                android:paddingEnd="@dimen/padding6"
                android:paddingTop="@dimen/padding10"
                android:paddingBottom="@dimen/padding10"

                />
            <Switch
                android:id="@+id/switch_dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding6"
                android:paddingEnd="@dimen/padding6"
                android:paddingTop="@dimen/padding10"
                android:paddingBottom="@dimen/padding10"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/text16"
                android:paddingStart="@dimen/padding6"
                android:paddingEnd="@dimen/padding6"
                android:paddingTop="@dimen/padding10"
                android:paddingBottom="@dimen/padding10"

                />
            <ImageButton
                android:id="@+id/share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_light"
                android:backgroundTintMode="screen"
                android:padding="@dimen/padding16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/support"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/text16"
                android:paddingStart="@dimen/padding6"
                android:paddingEnd="@dimen/padding6"
                android:paddingTop="@dimen/padding10"
                android:paddingBottom="@dimen/padding10"

                />
            <ImageButton
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_support_light"
                android:backgroundTintMode="screen"
                android:padding="@dimen/padding16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/termsOfUse"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/text16"
                android:paddingStart="@dimen/padding6"
                android:paddingEnd="@dimen/padding6"
                android:paddingTop="@dimen/padding10"
                android:paddingBottom="@dimen/padding10"

                />
            <ImageButton
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_light"
                android:backgroundTintMode="screen"
                android:padding="@dimen/padding16"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>